--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "label": "build",
       "type": "shell",
       "command": "make",
-      "args": [],
+      "args": ["-j8"],
       "group": { "kind": "build", "isDefault": true }
     },
     {
