--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stm32f769i_discovery_sdram.h": "c",
         "stm32f7xx.h": "c",
-        "stm32f769i_discovery_lcd.h": "c"
+        "stm32f769i_discovery_lcd.h": "c",
+        "fatfs_stdio.h": "c"
     }
 }
