Working bootloader for STM32F7508 Board Support (WIP)

--- a/ST/STM32F7508-Discovery/bootloader/Makefile
+++ b/ST/STM32F7508-Discovery/bootloader/Makefile
@@ -1,8 +1,5 @@
-# µDoom
-TARGET = udoom
+TARGET = stm32f750_qspi_bootloader
 
-## Makefile to build the firmware for STM32F769 Eval Board
-#
 # Call with "make Q=" to enable full path names
 #
 # TOOLCHAIN_ROOT path must be set.
@@ -18,74 +15,45 @@ $(error TOOLCHAIN_ROOT is not defined. Please set TOOLCHAIN_ROOT in a config.mk 
 endif
 
 Q ?= @
-BOARD ?= STM32F769I_DISCO
+BOARD ?= STM32F7508_DK
 
 # =======================================================================
 
 # =======================================================================
 
-APPNAME         := firmware
+APPNAME         := bootloader
 OBJDIR          := build
-CMSIS_DIR       := ST/Drivers/CMSIS
-HAL_DIR         := ST/Drivers/STM32F7xx_HAL_Driver
+CMSIS_DIR       := ../../Drivers/CMSIS
+HAL_DIR         := ../../Drivers/STM32F7xx_HAL_Driver
 
 # App source directories
 APP_SUBDIRS += \
-	./src \
-	./src/storage \
-	./src/storage/FatFs \
-	./doomgeneric \
-	./doomgeneric/stm32f7 \
+	./ \
 	$(HAL_DIR)/Src \
-	ST/STM32F7xx_shared
+	../../Drivers/BSP/STM32F7508-Discovery
 
 # Include directories
 APP_INCLUDE_PATH += \
-  -I./inc \
-  -I./src/storage/FatFs \
-  -I./doomgeneric \
+  -I. \
   -I$(CMSIS_DIR)/Include \
   -I$(CMSIS_DIR)/Device/ST/STM32F7xx/Include \
   -I$(HAL_DIR)/Inc
-
-# =======================================================================
-# STM32F769I Discovery Board
-# =======================================================================
-
-ifeq ($(BOARD),STM32F769I_DISCO)
-
-LINKER_SCRIPT   := ST/STM32F769I-Discovery/STM32F769NIHx_FLASH.ld
-APP_CPP_FLAGS   += -DSTM32F769xx -DUSE_HAL_DRIVER -DUSE_FULL_LL_DRIVER
-APP_SUBDIRS += \
-	ST/STM32F769I-Discovery \
-	ST/Drivers/BSP/STM32F769I-Discovery \
-	ST/Drivers/BSP/Components/nt35510/ \
-	ST/Drivers/BSP/Components/otm8009a/
-
-APP_INCLUDE_PATH += \
-	-IST/Drivers/BSP/STM32F769I-Discovery
-
-S_STARTUP := startup_stm32f769xx
-S_SRC += ST/STM32F769I-Discovery/$(S_STARTUP).s
-
-endif
 
 # =======================================================================
 # STM32F7508 Discovery Board
 # =======================================================================
 
 ifeq ($(BOARD),STM32F7508_DK)
-LINKER_SCRIPT   := ST/STM32F7508-DK/STM32F750V8Tx_FLASH.ld
-ADDITIONAL_DIR  := ST/STM32F7508-DK
+LINKER_SCRIPT   := stm32f750vb_flash.ld
 APP_CPP_FLAGS   += -DSTM32F750xx -DUSE_HAL_DRIVER -DUSE_FULL_LL_DRIVER
-APP_SUBDIRS += \
-	ST/STM32F7508-Discovery
 
 APP_INCLUDE_PATH += \
-	-IST/Drivers/BSP/STM32F7508-Discovery
+	-I../../Drivers/BSP/STM32F7508-Discovery \
+	-I../../Drivers/BSP/Components/n25q128a
+
 
 S_STARTUP := startup_stm32f750xx
-S_SRC += ST/STM32F7508-Discovery/$(S_STARTUP).s
+S_SRC += $(S_STARTUP).s
 
 endif
 
@@ -97,53 +65,19 @@ endif
 
 TARGET_COMPILER ?= gcc
 # default compiler optimization level:
-export OPTIMIZE_LEVEL ?= g
+export OPTIMIZE_LEVEL ?= 2
 APP_CPP_FLAGS   += -g3 -fno-builtin
-
 APP_CPP_FLAGS   += -fno-strict-aliasing -fno-math-errno
+
 ODFLAGS         := -x --syms
 
 CROSS_COMPILE   ?= arm-none-eabi-
-ARCH_FLAGS      += -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -mlittle-endian --specs=nosys.specs
-APP_CPP_FLAGS   += -nostdlib -ffreestanding
-APP_CPP_FLAGS   += -D_DEFAULT_SOURCE  # only to enable strdup()
-
-# -MMD: to autogenerate dependencies for make
-# -MP: These dummy rules work around errors make gives if you remove header
-#      files without updating the Makefile to match.
-# -MF: When used with the driver options -MD or -MMD, -MF overrides the default
-#      dependency output file.
-# -fno-common: This has the effect that if the same variable is declared
-#              (without extern) in two different compilations, you get a
-#              multiple-definition error when you link them.
-# -fmessage-length=n: If n is zero, then no line-wrapping is done; each error
-#                     message appears on a single line.
-# -fno-math-errno: Otherwise the default sqrt() function is used and we won't
-#                  get the ARM vsqrt.f32 (14 cycle) instruction (but not in O0)
-# --specs=nano.specs: Use newlib nano libc
-# --specs=nosys.specs: semihosting disabled
-
-# GCC compiler warnings
-GCC_STACK_WARNING_BYTES := 4096
+ARCH_FLAGS      += -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -mlittle-endian --specs=nosys.specs -fno-common -ffreestanding
 WARNING_CHECKS  := -Wall
-WARNING_CHECKS  += -Wframe-larger-than=$(GCC_STACK_WARNING_BYTES)
-WARNING_CHECKS  += -Wstack-usage=$(GCC_STACK_WARNING_BYTES)
-WARNING_CHECKS  += -Wdouble-promotion
-WARNING_CHECKS  += -Wpointer-arith
-WARNING_CHECKS  += -Wno-format # re-enable this later, but for now we trust the doom printfs
-WARNING_CHECKS  += -Wmissing-include-dirs
-WARNING_CHECKS  += -Wwrite-strings
-WARNING_CHECKS  += -Wlogical-op
-WARNING_CHECKS  += -Wunreachable-code
-WARNING_CHECKS  += -Wno-unknown-pragmas
-WARNING_CHECKS  += -Wno-discarded-qualifiers
-WARNING_CHECKS  += -Wvla
-WARNING_CHECKS  += -Wdate-time
 
 default: all
 
-
-LIBRARIES := -lm
+LIBRARIES :=
 
 # =======================================================================
 
@@ -151,12 +85,11 @@ COMPILER = $(CROSS_COMPILE)$(TARGET_COMPILER)
 
 CPP_FLAGS = $(APP_CPP_FLAGS)
 COMPILER_FLAGS  = -O$(OPTIMIZE_LEVEL)
-# -c: Compile without linking:
 COMPILER_FLAGS  += ${WARNING_CHECKS} -c
 COMPILER_FLAGS  += -MMD ${CPP_FLAGS} ${ARCH_FLAGS}
 ASM_FLAGS       = -x assembler-with-cpp ${COMPILER_FLAGS}
 LINK_FLAGS      = -Wl,--gc-sections -T $(LINKER_SCRIPT) ${ARCH_FLAGS} -Wl,-Map=${APPNAME}.map
-LINK_FLAGS      += -nostartfiles -nostdlib -nodefaultlibs
+LINK_FLAGS      += -nostartfiles
 
 OC              := ${TOOLCHAIN_ROOT}${CROSS_COMPILE}objcopy
 OD              := ${TOOLCHAIN_ROOT}${CROSS_COMPILE}objdump
